@@ -1,6 +1,7 @@
-@comment $NetBSD: PLIST,v 1.3 2007/08/20 11:21:20 abs Exp $
+@comment $NetBSD: PLIST,v 1.4 2007/08/21 15:43:46 abs Exp $
 bin/cpuflags
 man/man1/cpuflags.1
+share/cpuflags/subr_FreeBSD
 share/cpuflags/subr_Linux
 share/cpuflags/subr_NetBSD
 share/cpuflags/subr_SunOS
