@@ -1,4 +1,4 @@
-.\"	$NetBSD: cpuflags.1,v 1.17 2006/07/28 23:22:37 heinz Exp $
+.\"	$NetBSD: cpuflags.1,v 1.18 2007/08/21 15:43:46 abs Exp $
 .Dd May 31, 2001
 .Dt CPUFLAGS 1
 .Os
@@ -84,3 +84,7 @@ specific - gmake examples welcomed.
 Currently
 .Nm
 is also gcc specific.
+.Sh NOTES
+.Nm
+is based on input from many sources. I would like to thank them all, in
+particular Yakovetsky Vladimir.
